--- a/css/index.css
+++ b/css/index.css
@@ -111,11 +111,21 @@ body {
   justify-content: space-between;
   align-items: center;
 }
+@media (max-width: 800px) {
+  .container .intro {
+    flex-direction: column;
+  }
+}
 .container .intro .intro-text {
   padding: 2rem;
   width: 50%;
   display: flex;
   flex-direction: column;
+}
+@media (max-width: 800px) {
+  .container .intro .intro-text {
+    width: 80%;
+  }
 }
 .container .intro .intro-text h2 {
   margin-top: 0;
@@ -124,7 +134,6 @@ body {
   text-align: center;
   padding: 2rem;
   width: 50%;
-  height: 50%;
 }
 .container .intro .intro-img img {
   width: 100%;
